2004-06-03 Aaron Stone <aaron@serendipity.cx>

	* dbmail.h: added macro PRINTF_ARGS as a wrapper around
	__attribute__(format(printf...))), which is GCC specific.
	* debug.h, pop3.c, lmtp.c: now using PRINTF_ARGS.

2004-06-03  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_user_exists): escape user name using
	db_escape_string() before putting it in a query.
	(auth_md5_validate): escape username using db_escape_string()
	before putting it in a query.

	* all_files: changed from __FUNCTION__ preprocessor macro to
	__func__, which is used in C99.

	* serverchild.c (PerformChildTask): changed call to setlinebuf()
	to setvbuf() to make it work on non-BSD and non-GNU systems. The
	new call is functionally completely equivalent, it just looks
	different.

	* lmtp.c (lmtp_error): only add __attribute__ if __GNUC__
	is defined.

	* pop3.c (pop3): uses values from MessageStatus_t instead
	of hard coded values.
	(pop3_error): only add __attribute__ if __GNUC__ is defined.

	* maintenance.c (main): uses MESSAGE_STATUS_ERROR from
	MessageStatus_t instead of hard-coded value.

	* db.c: all queries which use status now use values from
	MessageStatus_t instead of hard-coded values.

	* dbsearch.c: all queries which use status now use values from
	MessageStatus_t instead of hard-coded values.

	* dbmailtypes.h: struct message now hold MessageStatus_t values

	* db.c (db_set_message_status): now accepts a MessageStatus_t
	as argument instead of an int.

	* dbmail.h: added enum MessageStatus_t to hold the different
	statusses a message can have.

2004-06-02 Aaron Stone <aaron@serendipity.cx>

	* INSTALL: reflowed text to 78 columns and consolidated two
	paragraphs about LMTP vs. SMTP into one.
	* auth/authldap.c (__auth_get_config): updated GetConfigValue
	helper macro and ReadConfig calls to new function signature. 

2004-06-01  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_findmailbox_owner): now searches for a literal
	'INBOX' if we're searching for the INBOX. No longer uses 